@@ -44,6 +44,8 @@ class HipChatService < Service
   end
 
   def execute build
+    return if build.allow_failure?
+
     commit = build.commit
     return unless commit
     return unless commit.builds_without_retry.include? build
